<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/supervisor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello Name"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/anganwadi_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textSize="18sp" />

    <Button
        android:id="@+id/newHelperBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_helper" />

    <Button
        android:id="@+id/showUnverifiedHelpersListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/unverified_helpers_list" />

    <Button
        android:id="@+id/showWorkingHelpersListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/working_helpers_list" />

    <Button
        android:id="@+id/showCurrentStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_Current_Stock" />
    <Button
        android:id="@+id/showStockBills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_Stock_Bills" />
    <Button
        android:id="@+id/showRejectedHelpers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_Rejected_Helpers" />
    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/log_out" />
</LinearLayout>