<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="24dp"
        android:onClick="animate"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/search"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_icons8_search"
            android:onClick="animate" />

        <EditText
            android:id="@+id/searchStockEditText"
            android:layout_width="150dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:background="@null"
            android:textSize="@dimen/editTextContentSize"
            android:paddingStart="4dp"
            android:textColor="@color/white"
            android:alpha="0" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/subHeadingSize"
            android:text="@string/billno"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/subHeadingSize"
            android:text="@string/datetime"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/subHeadingSize"
            android:text="@string/receivedby"/>



    </LinearLayout>

    <ListView
        android:id="@+id/stockBillsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>