<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/billno"
                    android:textSize="@dimen/editTextContentSize"/>
                <TextView
                    android:id="@+id/viewbillno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Bill No Value"
                    android:textSize="@dimen/editTextContentSize"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/datetime"
                    android:textSize="@dimen/editTextContentSize"/>
                <TextView
                    android:id="@+id/viewbilldate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Bill Date Value"
                    android:textSize="@dimen/editTextContentSize"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/billtime"
                    android:textSize="@dimen/editTextContentSize"/>
                <TextView
                    android:id="@+id/viewbilltime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Bill Time Value"
                    android:textSize="@dimen/editTextContentSize"/>

            </LinearLayout>

            <com.dmallcott.dismissibleimageview.DismissibleImageView
                android:id="@+id/billPicDismissableView"
                android:layout_width="280dp"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/billitems"
                android:textSize="@dimen/subHeadingSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.dmallcott.dismissibleimageview.DismissibleImageView
                    android:id="@+id/billItemsDismissableView1"
                    android:layout_width="136dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>

                <com.dmallcott.dismissibleimageview.DismissibleImageView
                    android:id="@+id/billItemsDismissableView2"
                    android:layout_width="136dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deliveredby"
                        android:textSize="@dimen/editTextContentSize"/>
                    <TextView
                        android:id="@+id/deliverypnameTxtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DeliveryPName"
                        android:textSize="@dimen/subHeadingSize"/>

                    <com.dmallcott.dismissibleimageview.DismissibleImageView
                        android:id="@+id/deliverypsignDismissableView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receivedby"
                    android:textSize="@dimen/editTextContentSize"/>
                <TextView
                    android:id="@+id/helpernameTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HelperName"
                    android:textSize="@dimen/subHeadingSize"/>

                <com.dmallcott.dismissibleimageview.DismissibleImageView
                    android:id="@+id/helpersignDismissableView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>