<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/helperIdVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="helperid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/avatarVerifyView"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:background="@drawable/redrect_viewborder"
                    android:padding="2dp"
                    android:src="@drawable/ic_profile"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marked"/>

                    <Switch
                        android:id="@+id/avatarSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/review" />

                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/nameTextVerifyView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="@dimen/editTextContentSize"
                    android:text="TextView"
                    android:background="@drawable/redrect_viewborder"/>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marked"/>

                    <Switch
                        android:id="@+id/nameSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/review" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/idProofVerifyImageView"
                    android:layout_width="220dp"
                    android:layout_height="240dp"
                    app:srcCompat="@android:drawable/btn_star_big_on"
                    android:background="@drawable/redrect_viewborder"/>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marked"/>
                    <Switch
                        android:id="@+id/idProofSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/review" />
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/verifyBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verify" />

                <Button
                    android:id="@+id/reviewBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Review" />

                <Button
                    android:id="@+id/rejectBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reject" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</LinearLayout>